manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "democluster-80e7"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "democluster-80e7"
  template:
    metadata:
      labels:
        app: "democluster-80e7"
    spec:
      containers:
        - name: "democluster-80e7"
          image: "kapasrijkubacr.azurecr.io/democluster"
          ports:
          - containerPort: 80
