manifests/service-77d7.yml
apiVersion: v1
kind: Service
metadata:
    name: "aaaatiwarishubaks-4dfa"
    labels:
        app: "aaaatiwarishubaks-4dfa"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "aaaatiwarishubaks-4dfa"
